--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,18 @@
     <h2>Existing Students</h2>
     <div id="students-container"></div>
 
-    
+    <div id="create-lesson-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Create a New Lesson</h2>
+            <input type="hidden" id="lesson-modal-student-id">
+            <label for="start-word-rank">Starting Word Rank:</label>
+            <input type="number" id="start-word-rank" min="1" max="2809"><br>
+            <label for="num-words">Number of Words:</label>
+            <input type="number" id="num-words" min="1"><br>
+            <button id="generate-lesson-button">Generate Lesson</button>
+        </div>
+    </div>
 
     <div id="add-link-modal" class="modal">
         <div class="modal-content">
